# Legal-Hub-KTJ-

./: .dockerignore  .gitignore  README.md  docker-compose.micro-advanced.yml  docker-compose.obs.yml  docker-compose.yml  package-lock.json  Копия Отчет ПИР за 2025г .xlsx
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_notifications_audit_reports.py  003_case_litigation_enforcement_debt.py  004_pir_plaintiff_recovered_and_execution_notes.py  005_pir_plaintiff_registry_section.py  006_drop_pir_registry_section.py  007_pir_registry_section_restore.py  008_drop_pir_registry_section_again.py  010_outbox_events.py  (+8 more)
backend/app/: factory.py  main.py
backend/contracts/: README.md
backend/demo/: demo_dataset.json
backend/scripts/: add_lawyers.py  analyze_pir_2025_discrepancy.py  assign_bins.py  assign_bins_2025.py  assign_bins_q1_2026.py  build_claims_template.py  build_pir_q1_2026_template.py  check_cases.py  check_row68.py  cleanup_lawyers.sql  diversify_case_metadata.py  export_openapi.py  extract_demo_json.py  fix_2025_categories.py  import_claims_from_xlsx.py  import_pir_2025.py  import_pir_demo_from_xlsx.py  import_pir_q1_2026.py  normalize_branches.sql  update_2025_bins.py
backend/templates/: claims_registry_template.xlsx  pir_report_2025_template.xlsx
backend/tests/: conftest.py  pir_compare.py  test_config.py  test_events_contract.py  test_export_openapi.py  test_models_import.py  test_pir_excel_export.py  test_roles.py
(+229 files in other folders)
