[project]
name = "legalhub-backend"
version = "0.1.0"
description = "LegalHUB FastAPI backend"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["scripts/adhoc", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
  "E501",  # длинные строки разрешены
  "E402",  # импорты после кода (factory.py: logger до импортов осознанно)
  "F401",  # unused import (re-exports в models/__init__.py и notification_service.py shim)
  "E741",  # short var names в excel-utils
  "I001",  # порядок импортов не форсируем (Ruff vs isort расходятся)
  "F821",  # forward-refs SQLAlchemy ("User", "Branch") резолвятся в runtime
  "F811",  # повторные импорты в shim-модулях
]

[tool.ruff.lint.per-file-ignores]
"app/models/legal.py" = ["F821"]
"app/models/iam.py" = ["F821"]
"app/domain/notification_service.py" = ["F401"]
